# cable-data-automation

./: .env.example  .gitattributes  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
app/: streamlit_app.py
config/: Universal_Cable_Model_(UCM).xlsx  construction_description_dictionary.xlsx  feature_schema.xlsx  manufacturers.json
docs/: github_sync.md  power_bi_report.md  run_commands.md
power_bi/: Cable_Price_Intelligence_Report.pbip  Cable_Price_Intelligence_Report.pbix  date_table.dax  measures.dax  theme.json
power_query/: Invoice_ETL.xlsm  Invoice_ETL.xlsx
presentation/: Cable_Price_Intelligence_DE.pptx
scripts/: audit_atomkip_processed.py  audit_conflex_processed.py  audit_mk_processed.py  audit_price_models.py  audit_toflex_processed.py  compare_manufacturer_capabilities.py  compare_price_models.py  create_power_bi_views.py  export_construction_descriptions.py  export_feature_mark_matrix.py  export_ucm.py  import_ucm_to_database.py  init_database.py  predict_prices.py  predict_prices_from_database.py  train_models_from_database.py
sql/: power_bi_views.sql
tests/: test_atomkip_formal_grammar.py  test_atomkip_generator_suffix_features.py  test_atomkip_im_p_om_p.py  test_atomkip_im_ps_om_k_p.py  test_atomkip_individual_screen_semantics.py  test_atomkip_mica_tape_layers.py  test_atomkip_new_mark.py  test_atomkip_ol_screen.py  test_atomkip_suffix_features.py  test_atomkip_transliteration_and_cross_section.py  test_atomkip_water_blocking_and_i.py  test_compare_price_models.py  test_conflex_parser_generator.py  test_etl_pipeline.py  (+12 more)
(+144 files in other folders)
