[project]
name = "6-portfolioproject"
version = "0.1.0"
description = "UCM-based parsing, conversion, and cable price forecasting"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.11.0",
    "pandas>=3.0.4",
    "psycopg[binary]>=3.3.4",
    "pytest>=9.1.1",
    "scikit-learn>=1.9.0",
    "sqlalchemy>=2.0.51",
    "streamlit>=1.59.2",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
